# tedlt

./: .env.example  .gitignore  .prettierrc  Cargo.toml  README.md  flatten.md  ideas.md  note.md  tedlt.jsonc  tedlt.toml.example
.github/workflows/: deploy-docs.yml
docs/: astro.config.mjs  pnpm-lock.yaml
docs-raw/: PROFILE_INHERITANCE.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/configuration/: config-file.md  environment.md  inheritance.md  overview.md  profiles.md  properties.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md
docs/src/content/docs/reference/: commands.md  config-schema.md
docs/src/content/docs/usage/: creating-tickets.md  info-commands.md  profiles.md
docs/src/styles/: custom.css
examples/: config-with-inheritance.jsonc
src/: cli.rs  config.rs  env.rs  jira.rs  main.rs
src/commands/: create.rs  info.rs  init.rs  mod.rs
src/config/: error.rs  file.rs  mod.rs  profiles_resolver.rs  properties_resolver.rs  resolved.rs  value_resolver.rs
src/jira/: mod.rs
