[package]
name = "tedlt"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/brequet/tedlt"

[profile.release]
strip = true          # Remove debug symbols
opt-level = "z"       # Optimize for size instead of speed
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization (slower compile)
panic = "abort"       # Remove unwinding code

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dependencies]
thiserror = "2.0.17"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
json5 = "0.4.1"
regex = "1.12.2"
once_cell = "1.21.3"
reqwest = { version = "0.12.24", features = ["json"] }
merge = { version = "0.2.0", features = ["derive"] }
